--- a/web/zmones.html
+++ b/web/zmones.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <button onclick="getZmones()">Get Data</button>
+    <button onclick="getZmones()">Get zmones</button> <!-- buvo Get Data--> <br>
+    <input type="number" id="id">
+    <button onclick="getZmogus()">Get zmogus</button>
     <div id="zmones"></div>
 
 
