--- a/web/zmones.html
+++ b/web/zmones.html
@@ -12,6 +12,7 @@
     <button onclick="getZmones()">Get zmones</button> <!-- buvo Get Data--> <br>
     <input type="number" id="id">
     <button onclick="getZmogus()">Get zmogus</button>
+    <button onclick="deleteZmogus()">Delete zmogus</button>
     <div id="zmones"></div>
 
 
