add zmogus json

--- a/web/zmones.html
+++ b/web/zmones.html
@@ -14,6 +14,11 @@
     <button onclick="getZmogus()">Get zmogus</button>
     <button onclick="deleteZmogus()">Delete zmogus</button>
     <div id="zmones"></div>
+    <hr>
+    Vardas: <input type="text" name="" id="vardas"> <br>
+    Pavarde: <input type="text" name="" id="pavarde"> <br>
+    Alga: <input type="text" name="" id="alga"> <br>
+    <button onclick="addZmogus()">Add zmogus</button>
 
 
 
