--- a/web/zmones.html
+++ b/web/zmones.html
@@ -17,8 +17,10 @@
     <hr>
     Vardas: <input type="text" name="" id="vardas"> <br>
     Pavarde: <input type="text" name="" id="pavarde"> <br>
+    Gimimo data: <input type="date" name="" id="gimimoData"> <br>
     Alga: <input type="text" name="" id="alga"> <br>
     <button onclick="addZmogus()">Add zmogus</button>
+    <button onclick="updateZmogus()">Update zmogus</button>
 
 
 
