--- a/web/zmones.html
+++ b/web/zmones.html
@@ -22,6 +22,20 @@
     <button onclick="addZmogus()">Add zmogus</button>
     <button onclick="updateZmogus()">Update zmogus</button>
 
+    <hr>
+    <!-- <button onclick="getZmones()">Get zmones</button> buvo Get Data <br> -->
+    <!-- <input type="number" id="id">
+    <button onclick="getZmogus()">Get zmogus</button>
+    <button onclick="deleteZmogus()">Delete zmogus</button>
+    <div id="zmones"></div>
+    <hr>
+    Vardas: <input type="text" name="" id="vardas"> <br>
+    Pavarde: <input type="text" name="" id="pavarde"> <br>
+    Gimimo data: <input type="date" name="" id="gimimoData"> <br>
+    Alga: <input type="text" name="" id="alga"> <br>
+    <button onclick="addZmogus()">Add zmogus</button>
+    <button onclick="updateZmogus()">Update zmogus</button> -->
+
 
 
 
