--- a/web/zmones.html
+++ b/web/zmones.html
@@ -23,18 +23,17 @@
     <button onclick="updateZmogus()">Update zmogus</button>
 
     <hr>
-    <!-- <button onclick="getZmones()">Get zmones</button> buvo Get Data <br> -->
-    <!-- <input type="number" id="id">
-    <button onclick="getZmogus()">Get zmogus</button>
-    <button onclick="deleteZmogus()">Delete zmogus</button>
-    <div id="zmones"></div>
+    <input type="number" id="zmogusId"><br>
+    <button onclick="getKontaktai()">Get kontaktai</button><br>
+    <input type="number" id="kid">
+    <button onclick="getKontaktas()">Get kontaktas</button>
+    <button onclick="deleteKontaktas()">Delete kontaktas</button>
+    <div id="kontaktai"></div>
+    Tipas: <input type="text" id="tipas"><br>
+    Reiksme: <input type="text" id="reiksme"><br>
     <hr>
-    Vardas: <input type="text" name="" id="vardas"> <br>
-    Pavarde: <input type="text" name="" id="pavarde"> <br>
-    Gimimo data: <input type="date" name="" id="gimimoData"> <br>
-    Alga: <input type="text" name="" id="alga"> <br>
-    <button onclick="addZmogus()">Add zmogus</button>
-    <button onclick="updateZmogus()">Update zmogus</button> -->
+    <button onclick="addKontaktas()">Add kontaktas</button>
+    <button onclick="updateKontaktas()">Update kontaktas</button>
 
 
 
